--- a/src/CssModules/Header.module.css
+++ b/src/CssModules/Header.module.css
@@ -2,6 +2,10 @@
       box-sizing: border-box;
       position: relative;
 }
+body,html{
+      width:100%;
+      height:100%;
+}
 .navbar{
       position:fixed;
       width:100%;
