--- a/src/CssModules/Header.module.css
+++ b/src/CssModules/Header.module.css
@@ -2,10 +2,9 @@
       box-sizing: border-box;
       position: relative;
 }
-body,html{
+body{
       width:100%;
-      height:100%;
-}
+  }
 .navbar{
       position:fixed;
       width:100%;
@@ -32,12 +31,18 @@ body,html{
 .navbar .Nav li{
       list-style: none;
 }
+
+
 .navbar .Nav .Navlink{
       display:block;
       color:#fff;
       line-height: 24px;
+      text-decoration: none;
       padding:20px 16px;
       transition: color 0.3s;
+}
+.navbar .NavMenu .Navlink{
+      text-decoration: none;
 }
 .navbar .Nav .Navlink:hover{
 	color: #d5a26f;
