--- a/src/CssModules/FeedBack.module.css
+++ b/src/CssModules/FeedBack.module.css
@@ -26,7 +26,10 @@ body{
 .jsCardContainer{
 	max-width: 300px;
 	margin:0 auto;
-	margin-top: 5vh;
+	margin-top: 3vh;
+}
+.jsCardContainer:hover{
+      box-shadow: inset 0 0 1em gold, 0 0 1em red;
 }
 .jdCard{
 	background-color: white;
@@ -41,12 +44,12 @@ body{
 	object-fit: cover;
 }
 .jdCardDetail{
-	padding: 16px 8px 8px 8px;
+      padding:8px 16px 8px 16px;
+      height:290px;
 }
 .jdCardDetail p{
    font-size: 14px;
    color: #7f8c9b;
-   line-height: 150%;
 }
 .jdCardDetail a{
 	border: none;
@@ -65,7 +68,8 @@ body{
 	color:black;
 }
 .jdCardTitle{
-   font-size: 24px;
+   font-size: 18px;
    font-weight: 600;
-   margin-top: 16px;
+   margin-top: 10px;
+   margin-bottom: 5px;
 }
