--- a/src/CssModules/HomePage.module.css
+++ b/src/CssModules/HomePage.module.css
@@ -218,27 +218,11 @@ body{
     padding: 20px;
 	position: relative;
 }
-.serviceItem .serviceText:before{
-    content: '';
-	position: absolute;
-	width: 0;
-	height: 0;
-	left: 0;
-	top: 0;
-    border-top: 40px solid transparent;
-	border-left: 125px solid #fff;
-	border-right: 125px solid #fff;
-	transform: translateY(-100%);
-}
 .serviceItem:hover{
     transform: translateY(-50px);
 }
 .serviceItem:hover .serviceText{
     background-image: linear-gradient(0deg,#FB8076, #FEB85D);
-}
-.serviceItem:hover .serviceText:before{
-    border-left: 125px solid #FEB85D;
-	border-right: 125px solid #FEB85D;
 }
 .serviceItem:hover h2{
     color: #fff;
@@ -246,4 +230,41 @@ body{
 }
 .serviceItem:hover p{
     color: #fff;
+}
+/* 以下為設定預約流程的部分設定 */
+.bookProcessWrap{
+    width:100%;
+    background-color: #fff;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-align: center;
+}
+.bookProcessSubtitle{
+    color:#f7f7f7;
+    letter-spacing:15px;
+}
+.BookingProcessContainer{
+    display: flex;
+    width: 100%;
+	margin: auto;
+    align-items: center;
+}
+.BookingProcessItem{
+    display: inline-block;
+     
+}
+.BookingProcessItem img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+.BookingProcessText{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 10px; 
+    width: 100%;
+    padding: 10px;
 }
