--- a/src/CssModules/HumanDesignIntroduce.module.css
+++ b/src/CssModules/HumanDesignIntroduce.module.css
@@ -12,8 +12,16 @@ body{
 .HumanDesignWrap{
     width:100%;
     padding-top: 84px;
-    background-color: #fffae4;
+    color:white;
+    background: linear-gradient(to right, 
+    #000 0%,
+    #333 20%,
+    transparent 50%,
+    #333 80%,
+    #000 100%
+  );
     text-align: center;
+    
 }
 .HumanDesignMainTitle{
     font-weight: 800;
@@ -24,9 +32,10 @@ body{
     width: 100%;
 	margin: auto;
 	overflow: hidden;
-    background-color: #000;
     list-style: none;
     font-family: 'Noto Sans TC', sans-serif;
+    padding-right: 15%;
+    padding-left: 25%;
 }
 .HoverHumanDesignItem{
     float: left;
@@ -37,11 +46,14 @@ body{
 	vertical-align: middle;
 }
 .HoverHumanDesignItem:first-child{
-    width:50%;
+    width:40%;
+   
 }
 .HoverHumanDesignItem:first-child ~ .HoverHumanDesignItem{
-	width:25%;
-}
+	width:40%;
+    align-self: center;
+} 
+
 
 .HoverHumanDesignItem .HoverHumanDesignText{
     position: absolute;
@@ -73,7 +85,7 @@ body{
     font-weight: 100;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 576px){
     .HoverHumanDesignItem .HoverHumanDesignText{
         display: block;
     }
@@ -95,107 +107,3 @@ body{
     }
    
 }
-/* 以下是拼接圖介紹將各細項呈現出來的樣式部分 */
-.humanTotalDetailWrap{
-    width:100%;
-    list-style: none;
-} 
-.boxContainer {
-    width: 100%;
-    margin: auto;
-    padding: 100px 0;
-    display: flex;
-    flex-wrap: wrap;
-    border:2px solid red;
-  }
-  
-  .boxContainer li {
-    width: 200px;
-    height: 200px;
-    text-align: center;
-    line-height: 200px;
-    margin: 0 60px -40px;
-    position: relative;
-    font-size: 30px;
-    font-family: 'Noto Sans TC', sans-serif;
-  }
-  
-  .boxContainer li::before {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    transform: rotate(45deg);
-  }
-  
-  .boxContainer li:nth-child(n + 4) {
-    left: 160px;
-  }
-  
-  .boxContainer li:nth-child(n + 7) {
-    left: 0;
-  }
-  
-  .box1::before {
-    background-color: #3ed0cd;
-  }
-  
-  .box2::before {
-    background-color: #b2e086;
-  }
-  
-  .box3::before {
-    background-color: #ef8899;
-  }
-  
-  .box4::before {
-    background-color: #fc7b51;
-  }
-  
-  .box5::before {
-    background-color: #2fccf9;
-  }
-  
-  .box6::before {
-    background-color: #5f539b;
-  }
-  
-  .box7::before {
-    background-color: #fce920;
-  }
-  
-  .box8::before {
-    background-color: #7cc85c;
-  }
-  
-  .box9::before {
-    background-color: #ffa55e;
-  }
-  
-  .boxContainer li:hover {
-    color: #fff;
-  }
-  
-  .boxContainer li:hover::before {
-    background-color: #000;
-  }
-  
-  .footerText {
-    position: fixed;
-    z-index: 10;
-    bottom: 0;
-    padding: 10px;
-    left: 0;
-    right: 0;
-    color: #fff;
-    background: #000;
-    text-align: center;
-    font-size: 30px;
-  }
-  
-  .link {
-    color: #fa0;
-  }
