--- a/src/CssModules/HumanDesignDetail.module.css
+++ b/src/CssModules/HumanDesignDetail.module.css
@@ -27,4 +27,88 @@ body{
 .HumanDesignMainTitle{
     font-weight: 800;
     margin-bottom: 20px;
+    color:#ff0000;
+    margin-top: 20px;
 }
+.GelleryContainer {
+    padding: 0 16px;
+    width: 80%;
+    margin: 0 auto;
+    color: #fff;
+	background-color: rgba(0,0,0,.6);
+}
+
+.GelleryRow {
+    margin: 0 -16px;
+}
+.GelleryImageContainer {
+    margin: 0 auto; 
+    width: 100%; 
+}
+.GelleryContainer img{
+        width: 100%;
+        height: auto;
+    
+}
+.GelleryImageContainer:before {
+    content: '';
+    display: block;
+    width: 75%;
+    padding-top: 75%;
+}
+
+.GelleryImageContainer .GelleryImage {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+.textContainer{
+    color: #fff;
+	background-color: rgba(0,0,0,.6);
+    position: absolute; 
+    top: 50%; 
+    transform: translateY(-50%); 
+    font-size: 25px;
+    width:100%;
+    line-height: 45px;
+}
+  @media screen and (max-width: 1280px){
+    .textContainer{
+        position: relative;
+        font-size: 15px;
+        line-height: 30px;
+    }
+    .GelleryContainer{
+        width:100%;
+        padding: 0;
+    }
+}  
+
+/* .GelleryImageContainer:after {
+    content: "CLICK";
+    display: block;
+    color: #fff;
+    font-size: 1rem;
+    line-height: 2;
+    letter-spacing: .1rem;
+    text-align: center;
+    background-color: rgba(105, 115, 127, .5);
+    position: absolute;
+    width: 92px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    backdrop-filter: blur(5px);
+    transition: all .2s;
+}
+
+.GelleryImageContainer:hover:after {
+    width: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}  */ 
