--- a/src/CssModules/HumanDesignDetail.module.css
+++ b/src/CssModules/HumanDesignDetail.module.css
@@ -37,9 +37,9 @@ body{
     color: #fff;
 	background-color: rgba(0,0,0,.6);
 }
-
 .GelleryRow {
-    margin: 0 -16px;
+    margin-bottom:20px;
+    border-bottom:1px solid #c4c4c4;
 }
 .GelleryImageContainer {
     margin: 0 auto; 
@@ -70,9 +70,8 @@ body{
     position: absolute; 
     top: 50%; 
     transform: translateY(-50%); 
-    font-size: 25px;
-    width:100%;
-    line-height: 45px;
+    font-size: 20px;
+    line-height: 40px;
 }
   @media screen and (max-width: 1280px){
     .textContainer{
@@ -85,30 +84,3 @@ body{
         padding: 0;
     }
 }  
-
-/* .GelleryImageContainer:after {
-    content: "CLICK";
-    display: block;
-    color: #fff;
-    font-size: 1rem;
-    line-height: 2;
-    letter-spacing: .1rem;
-    text-align: center;
-    background-color: rgba(105, 115, 127, .5);
-    position: absolute;
-    width: 92px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    backdrop-filter: blur(5px);
-    transition: all .2s;
-}
-
-.GelleryImageContainer:hover:after {
-    width: 150px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}  */ 
