--- a/src/CssModules/Booking.module.css
+++ b/src/CssModules/Booking.module.css
@@ -14,13 +14,11 @@ body,html{
     width:100%;
     height:100%;
 }
-.bookingEntranceWrapper{
-    width:100%;
-}
 .bookingEntranceContainer{
     border:2px solid blue;
     padding-top: 64px;
     height:400px;
+    width:100%;
 }
 .bookingEntranceListsContainer{
     max-width: 600px;
@@ -37,14 +35,19 @@ body,html{
     justify-content: center;
     width:20%;
 }
+
 .bookingListImageContainer img{
     margin: 0 auto;
 }
 .bookingItems{
-    text-align: left;
+    width:80%;
 }
-.bookingItems svg{
-    margin: 0.8rem;
+.bookingItemsIcons span{
+    text-align: left;
+    margin: 0.3rem;
+}
+.bookingItemsIcons svg{
+    margin: 0.3rem;
 }
 .bookingItemsButtonContainer{
     width:20%;
@@ -58,7 +61,59 @@ body,html{
     width:95px;
     height:65px;
     border-radius: 5px;
+    color:white;
 }
-.bookingItems p{
-    margin-top: 20px;
+.bookingButtonIcon{
+    width:15px;
+    height:15px;
+    margin:5px;
+    top:5px;
 }
+/* 以下為小於576px時的樣式設定 */
+.isMobileHeader{
+    width:85%;
+}
+.isMobileImage{
+    width:15%; 
+    text-align: left;
+}
+.isMobileImage img{
+    width:50px;
+    height:50px;
+}
+.isMobileHeader p{
+    font-size: 10px;
+    margin: 0;
+}
+.isMobileButton{
+    display: flex;
+    justify-content: center;
+    color:white;
+}
+.isMobileButton span{
+    margin-left: 5px;
+}
+ @media screen and (max-width:350px) {
+    .isMobileImage img{
+        width:35px;
+        height:35px;
+    }
+} 
+@media screen and (max-width:350px) {
+    .isMobileImage img{
+        width:35px;
+        height:35px;
+    }
+} 
+@media screen and (max-width:300px) {
+    .bookingItemsIcons span{
+        margin: 0.1rem;
+    }
+    .bookingItemsIcons svg{
+        margin: 0.1rem;
+    }
+} 
+
+
+
+
