--- a/src/CssModules/Header.module.css
+++ b/src/CssModules/Header.module.css
@@ -1,10 +1,9 @@
 *{
       box-sizing: border-box;
       position: relative;
+      margin: 0;
+      padding: 0;
 }
-body{
-      width:100%;
-  }
 .navbar{
       position:fixed;
       width:100%;
