--- a/src/CssModules/Calendar.module.css
+++ b/src/CssModules/Calendar.module.css
@@ -16,7 +16,8 @@ body,htmo{
 .BasicCalendarContainer{
     margin-top:64px;
     margin-bottom:50px;
+    padding-top: 30px;
     width:100%;;
-    height:100vh;
-    border:2px solid red;
+    height:600px;
+    text-align: center;
 }
