--- a/src/CssModules/Booking.module.css
+++ b/src/CssModules/Booking.module.css
@@ -133,10 +133,32 @@ body,html{
         margin: 0.5rem;
     }
 } 
-/* @media screen and (max-width:300px) {
-    
-}  */
-
+/* 以下為第一次輸入預約項目後的確認頁面的 CSS 樣式 */
+.checkBookingFirstWrapper{
+    padding-top:84px;
+    width:100%;
+    height:100vh;
+    background-color: #fffae4;
+}
+.checkBookingContainer{
+    margin:0 auto;
+    width:50%;
+    display:flex;
+    flex-direction:column;
+}
+.checkBookingItem{
+    margin-top:2rem;
+    margin-bottom:2rem;
+    font-size:33px;
+    font-weight:bold;
+}
+@media screen and (max-width:768px){
+    .checkBookingItem{
+        margin-top:1rem;
+        margin-bottom:1rem;
+        font-size:25px;
+    }
+}
 
 
 
