--- a/src/CssModules/AuthProcess.module.css
+++ b/src/CssModules/AuthProcess.module.css
@@ -13,8 +13,23 @@ body,html{
     width:100%;
     padding-top:4rem;
 }
+.signOutContainer{
+    width:100%;
+    padding-top:4rem;
+}
+.afterSignUpContainer{
+    width:100%;
+    padding-top:5rem;
+    padding-bottom:3rem;
+}
 @media(max-width:450px){
     .signUpContainer{
+        height:780px;
+    }
+    .signOutContainer{
+        height:780px;
+    }
+    .afterSignUpContainer{
         height:780px;
     }
 }
