--- a/src/CssModules/HomePage.module.css
+++ b/src/CssModules/HomePage.module.css
@@ -175,6 +175,13 @@ body{
     padding-top: 1rem;
     padding-bottom: 1.5rem;
 }
+.serviceWrap2{
+    width:100%;
+    background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(115,245,180,1) 35%, rgba(0,212,255,1) 100%);
+    text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 1.5rem;
+}
 .serviceTitle{
     color:white;
     margin-bottom: 15px;
