--- a/src/CssModules/HomePage.module.css
+++ b/src/CssModules/HomePage.module.css
@@ -13,6 +13,7 @@ body{
 	height: 100vh;
     padding-top: 2rem;
 	background-color: #ccc;
+    text-align:center;
 	background:
 	linear-gradient(115deg, #7bf 50%, transparent 50%) center center / 100% 100%,
 	url("https://picsum.photos/1200/600?random=10") right center / auto 100%;
@@ -189,6 +190,13 @@ body{
 .serviceContainer{
     width: 100%;
 	display: flex;
+	margin: auto;
+    align-items: center;
+}
+.serviceContainer2{
+    width: 100%;
+	display: flex;
+    height:100vh;
 	margin: auto;
     align-items: center;
 }
