--- a/src/CssModules/Calendar.module.css
+++ b/src/CssModules/Calendar.module.css
@@ -32,7 +32,19 @@ body,htmo{
 } 
 .ButtonContainerTwo{
     top:0;
-} 
+}
+.EmailInput{
+    width:"350px";
+    height:55px;
+    font-size:20px;
+    color:#000;
+    border:1px solid #676766;
+    border-radius:5px;
+    padding-left:1rem;
+}
+.EmailInput:hover{
+    border:2px solid #1192ff;
+}
 @media(max-width:576px){
     .ButtonContainerTwo{
         display:flex;
