--- a/src/CssModules/Header.module.css
+++ b/src/CssModules/Header.module.css
@@ -6,7 +6,7 @@
 }
 .navbar{
       position:fixed;
-      width:100%;
+      width:100vw;
       height:64px;
       z-index:500;
       background-color: rgba(0,0,0,0.8);
@@ -37,7 +37,8 @@
       color:#fff;
       line-height: 24px;
       text-decoration: none;
-      padding:20px 16px;
+      padding:24px 20px;
+      font-size:18px;
       transition: color 0.3s;
 }
 .navbar .NavMenu .Navlink{
@@ -46,7 +47,7 @@
 .navbar .Nav .Navlink:hover{
 	color: #d5a26f;
 }
-/* 設定當小於768px時，用useState選取NavMenu，並以NavMenu為點擊後的項目列表 */
+/* 設定當小於768px時，用 useState 選取 NavMenu ，並以 NavMenu 為點擊後的項目列表 */
 @media screen and (max-width: 768px){
 /*設定當小於768px時原Nav消失，NavMenu出現  */
       .navbar .Nav{
@@ -55,7 +56,7 @@
       .navbar .NavMenu{
             position:fixed;
             left:0;
-            top:46px;  
+            top:64px;  
             width:100%;
             height:100%;
             background-color: rgba(0,0,0,0.8);
@@ -65,6 +66,7 @@
             text-align: center;
             align-items: center;
             opacity: 1;
+            font-size:18px;
 		visibility: visible;
             transition: all 0.3s;
       }
@@ -84,10 +86,12 @@
       margin-top:8px;
       display:none;
 }
+
 @media screen and (max-width: 768px){
       .navbar .menuToggle{
             display: block;
       }
+      
 }
 /* 漢堡列細部設定 */
 .navbar .menuToggle span{
@@ -99,6 +103,7 @@
       left:50%;
       transform: translate(-50%,0);
 }
+
 .navbar .menuToggle span:nth-child(1){
       top:12px;
 }
@@ -107,4 +112,19 @@
 }
 .navbar .menuToggle span:nth-child(3){
       top:32px;
-}
+} 
+
+/* 當點擊時，第一條線變成叉叉 */
+.navbar .menuToggle.clicked span:nth-child(1) {
+      transform: rotate(-53deg) translate(-10px, 8px);
+    }
+    
+    /* 當點擊時，第二條線消失 */
+    .navbar .menuToggle.clicked span:nth-child(2) {
+      opacity: 0;
+    }
+    
+    /* 當點擊時，第三條線變成叉叉 */
+    .navbar .menuToggle.clicked span:nth-child(3) {
+      transform: rotate(53deg) translate(-5px, -5px);
+    }
