--- a/src/CssModules/HumanDesignIntroduce.module.css
+++ b/src/CssModules/HumanDesignIntroduce.module.css
@@ -26,6 +26,7 @@ body{
 .HumanDesignMainTitle{
     font-weight: 800;
     margin-bottom: 20px;
+    color:#f72f02;
 }
 /* 以下為滑動介紹人類圖是什麼的設定 */
 .HoverHumanDesignWarap{
@@ -45,7 +46,6 @@ body{
 }
 .HoverHumanDesignItem:first-child{
     width:40%;
-   
 }
 .HoverHumanDesignItem:first-child ~ .HoverHumanDesignItem{
 	width:40%;
@@ -59,7 +59,6 @@ body{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	padding: 15px;
 	box-sizing: border-box;
 	text-align: center;
 	color: #fff;
@@ -77,7 +76,7 @@ body{
 	opacity: 1;
 }
 .HoverHumanDesignItem h3{
-    margin-bottom: .4em;
+    margin-bottom: .8em;
 }
 .HoverHumanDesignItem p{
     font-weight: 100;
@@ -92,14 +91,15 @@ body{
         display: block;
     }
     .HoverHumanDesignItem:hover .HoverHumanDesignText{
-        
+        position: absolute;
+        padding-top:40%; 
         font-size: 15px;
     }
     .HoverHumanDesignItem h3{
-        font-size: 15px;
+        font-size: 25px;
     }
     .HoverHumanDesignItem p{
-        font-size: 10px;
+        font-size: 18px;
     }
     .HoverHumanDesignItem:first-child ~ .HoverHumanDesignItem{
         width: 50%;
