--- a/src/CssModules/Footer.module.css
+++ b/src/CssModules/Footer.module.css
@@ -4,9 +4,6 @@
       box-sizing: border-box;
       padding:0
 }
-/* body{
-      width:100%;
-  } */
 
 .footer{
       width:100vw;
@@ -30,6 +27,7 @@
       width:50%;
       display:flex;
       flex-direction: row;
+      padding-top:3rem;
 }
 /* 有關Icons部分 */
 .footerIcons{
