--- a/src/CssModules/Header.module.css
+++ b/src/CssModules/Header.module.css
@@ -13,6 +13,8 @@
       left:0;
       top:0;
       display:flex;
+      justify-content:center;
+      align-items:center;
       flex-direction: row;
       justify-content: space-around;
 }
