--- a/src/CssModules/AuthProcess.module.css
+++ b/src/CssModules/AuthProcess.module.css
@@ -39,3 +39,17 @@ body,html{
         eight:780px;
     }
 }
+/* 以下是讓使用者寄 Eamil 的樣式設定 */
+.emailFormContainer{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+}
+.emailForm{
+    display:flex;
+    flex-direction:column;
+}
+input,textarea{
+    margin:10px 0px;
+}
